--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <!-- <script src="ext/p5.sound.min.js"></script> -->
   <script src="ext/dat.gui.min.js"></script>
   <script src="ext/tween.js"></script>
+  <!-- <script src="ext/CCapture.all.min.js"></script> -->
+  <script src="ext/CCapture.js"></script>
+  <script src="ext/Whammy.js"></script>
+  <script src="ext/download.js"></script>
   <style>
     html, body { overflow: hidden; margin: 0; padding: 0; }
   </style>
