--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <script src="ext/p5.min.js"></script>
   <!-- <script src="ext/p5.dom.min.js"></script> -->
-  <!-- <script src="ext/p5.sound.min.js"></script> -->
+  <script src="ext/p5.sound.min.js"></script>
   <script src="ext/dat.gui.min.js"></script>
   <script src="ext/tween.js"></script>
   <!-- <script src="ext/CCapture.all.min.js"></script> -->
